updated header to show profile picture of current user

--- a/src/app/default-header/default-header.component.html
+++ b/src/app/default-header/default-header.component.html
@@ -5,6 +5,6 @@
         <p class="flush-text">{{subtitle}}</p>
     </div>
     <div class="image">
-        <img (click)="redirectToProfilePage()" [src]="imageurl" class="profile-picture" alt="profile picture">
+        <img (click)="redirectToProfilePage()" [src]="imageurl" (error)="handleImageError()" class="profile-picture" alt="profile picture">
 
     </div>
