select family members to delete

--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -21,7 +21,7 @@
                         <button type="button" class="button" href="#">Add</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="button medium-green" (click)="openModal()" href="#">Edit</button>
+                        <button type="button" class="button medium-green" (click)="openModal(family)" href="#">Edit</button>
                     </li>
                 </ul>
             </div>
@@ -36,3 +36,5 @@
         </div>
     </div>
 </div>
+<button type="button" class="button" id="new-family" href="#">Join a new family</button>
+
