--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,12 @@ p {
 .medium-green {
   background-color: $medium-green;
 }
+.dark-gray {
+  background-color: $dark-gray;
+}
+.light-gray {
+  background-color: $light-gray;
+}
 
 html, body {
   max-width: 100%;
