--- a/src/app/family-modal/family-modal.component.html
+++ b/src/app/family-modal/family-modal.component.html
@@ -1,16 +1,19 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-    <button
-            type="button"
-            class="btn-close"
-            aria-label="Close"
-            (click)="modalRef.close()"
-    ></button>
+    <h4 class="modal-title" id="exampleModalLabel">Edit family members of {{ family?.family_name }}</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
-<div class="modal-body">...</div>
+<div class="modal-body">
+    <div *ngFor="let user of family?.users">
+        <div *ngIf="user.user_id !== currentUser.user_id" class="user-container" (click)="selectUser(user.user_id)">
+            <img [src]="user.picture_url" (error)="handleImageError(user)" alt="Profile Picture" class="profile-picture">
+            <p class="user-container-text">{{ user.first_name }} {{ user.last_name }}</p>
+        </div>
+    </div>
+
+</div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+    <button type="button" class="button dark-gray" (click)="modalRef.close()">
         Close
     </button>
-    <button type="button" class="btn btn-primary">Save changes</button>
+    <button type="button" class="button dark-green">Confirm</button>
 </div>
