--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -12,13 +12,12 @@
                     <p class="user-container-text">{{ user.first_name }} {{ user.last_name }}</p>
                 </div>
             </div>
-
         </div>
         <div class="card-header">
             <div *ngIf="family.is_admin ; else elseBlock">
                 <ul class="nav nav-pills card-header-pills">
                     <li class="nav-item">
-                        <button type="button" class="button" href="#">Add</button>
+                        <button type="button" class="button" href="#" (click)="openModalAdd(family)">Add</button>
                     </li>
                     <li class="nav-item">
                         <button type="button" class="button medium-green" (click)="openModal(family)" href="#">Edit</button>
@@ -32,7 +31,6 @@
                     </li>
                 </ul>
             </ng-template>
-
         </div>
     </div>
 </div>
