--- a/src/app/family-modal/family-modal.component.html
+++ b/src/app/family-modal/family-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">Edit members of {{ family?.family_name }}</h4>
+    <h4 class="modal-title" id="exampleModalLabel">Delete members of {{ family?.family_name }}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-body">
