join a family by searching for id

--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -34,5 +34,5 @@
         </div>
     </div>
 </div>
-<button type="button" class="button" id="new-family" href="#">Join a new family</button>
+<button type="button" class="button" id="new-family" href="#" (click)="openModalJoin()">Join a new family</button>
 
