--- a/src/app/family-modal-add/family-modal-add.component.html
+++ b/src/app/family-modal-add/family-modal-add.component.html
@@ -1,9 +1,10 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">Add member to {{ family?.family_name }}</h4>
+    <h4 class="modal-title" id="exampleModalLabel">{{ title }}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
-<div class="modal-body">
-    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+<div class="modal-body" *ngIf="searchuser; else elseBlock">
+
+    <form [formGroup]="userForm" (ngSubmit)="onSubmitUserForm()">
         <div class="mb-3">
             <label for="userId" class="form-label">User ID</label>
             <input type="text" class="form-control" id="userId" formControlName="userId" required>
@@ -18,3 +19,23 @@
         </div>
     </form>
 </div>
+
+<ng-template #elseBlock>
+    <div class="modal-body">
+        <form [formGroup]="familyForm" (ngSubmit)="onSubmitFamilyForm()">
+            <div class="mb-3">
+                <label for="userId" class="form-label">Family ID</label>
+                <input type="text" class="form-control" id="familyId" formControlName="familyId" required>
+                <div *ngIf="familyForm.get('familyId')?.hasError('pattern') && familyForm.get('familyId')?.touched" class="text-danger">
+                    Please enter a valid ID.
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="button dark-gray" (click)="modalRef.close()">Close</button>
+                <button type="submit" class="button dark-green">Join</button>
+            </div>
+        </form>
+    </div>
+
+</ng-template>
