--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -5,27 +5,27 @@
 <h3>Your likes</h3>
 <div class="liked-recipes">
     <!-- recipes.component.html -->
-    <div *ngFor="let recipe of recipes" class="recipe-small-view">
+    <div *ngFor="let index of recipeIndices" class="recipe-small-view">
         <div class="image-with-border">
-            <img [src]="urls[0]" alt="Image of {{ recipe.name }}">
-            <button class="btn btn-outline-secondary" (click)="toggleHeart(recipe)">
+            <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
+            <button class="btn btn-outline-secondary" (click)="toggleHeart(liked_recipes[index])">
                 <i [class]="0 ? 'fas fa-heart' : 'far fa-heart'"></i>
             </button>
+            <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
         </div>
-        <p>{{ recipe.name }}</p>
     </div>
 </div>
 <h3>Your nono's</h3>
 <div class="disliked-recipes">
     <!-- recipes.component.html -->
-    <div *ngFor="let recipe of recipes" class="recipe-small-view">
+    <div *ngFor="let index of recipeIndices" class="recipe-small-view">
         <div class="image-with-border">
-            <img [src]="urls[0]" alt="Image of {{ recipe.name }}">
-            <button class="btn btn-outline-secondary" (click)="toggleHeart(recipe)">
+            <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
+            <button class="btn btn-outline-secondary" (click)="toggleHeart(liked_recipes[index])">
                 <i [class]="0 ? 'fas fa-heart' : 'far fa-heart'"></i>
             </button>
+            <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
         </div>
-        <p>{{ recipe.name }}</p>
     </div>
 </div>
 
