--- a/src/app/Register/register.component.html
+++ b/src/app/Register/register.component.html
@@ -1,1 +1,5 @@
-<p>register works!</p>
+<div class="tab">
+    <button class="tablinks" routerLink="/welcome">Tab 1</button>
+    <button class="tablinks" routerLink="/sign-up">Tab 2</button>
+    <button class="tablinks" routerLink="/congrats">Tab 3</button>
+  </div>
