create new family and delete family as admin

--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -20,7 +20,7 @@
                         <button type="button" class="button" href="#" (click)="openModalAdd(family)">Add</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="button medium-green" (click)="openModal(family)" href="#">Delete</button>
+                        <button type="button" class="button medium-green" (click)="openModal(family)" href="#">Edit</button>
                     </li>
                 </ul>
             </div>
@@ -34,5 +34,7 @@
         </div>
     </div>
 </div>
-<button type="button" class="button" id="new-family" href="#" (click)="openModalJoin()">Join a new family</button>
+<div class="row"><button type="button" class="button" id="new-family" href="#" (click)="openModalJoin()">Join a family</button></div>
+<div class="row"><button type="button" class="button" id="create-family" href="#" (click)="openModalCreate()">Create a family</button></div>
+
 
