--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -8,9 +8,10 @@
     <div *ngFor="let index of recipeIndices" class="recipe-small-view">
         <div class="image-with-border">
             <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
-            <button class="btn btn-outline-secondary" (click)="toggleHeart(liked_recipes[index])">
-                <i [class]="0 ? 'fas fa-heart' : 'far fa-heart'"></i>
+            <button class="btn btn-outline-secondary" (click)="toggle_like_Heart(index)">
+                <i [class]="liked_recipes_liked[index] ? 'bi bi-heart-fill text-danger' : 'bi bi-heart'"></i>
             </button>
+
             <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
         </div>
     </div>
@@ -21,9 +22,10 @@
     <div *ngFor="let index of recipeIndices" class="recipe-small-view">
         <div class="image-with-border">
             <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
-            <button class="btn btn-outline-secondary" (click)="toggleHeart(liked_recipes[index])">
-                <i [class]="0 ? 'fas fa-heart' : 'far fa-heart'"></i>
+            <button class="btn btn-outline-secondary"  (click)="toggle_like_Heart(index)">
+                <i class="bi bi-heart" [class.red] = "liked_recipes_liked[index]"></i>
             </button>
+
             <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
         </div>
     </div>
