replaced bottom navbar

--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -37,6 +37,7 @@
     </div>
     <button type="button" class="button" id="new-family" href="#" (click)="openModalJoin()">Join a family</button>
     <button type="button" class="button" id="create-family" href="#" (click)="openModalCreate()">Create a family</button>
+    <app-bottom-navigation></app-bottom-navigation>
 </div>
 
 
