--- a/src/app/meal-plans/meal-plans-home/meal-plans-home.component.html
+++ b/src/app/meal-plans/meal-plans-home/meal-plans-home.component.html
@@ -42,6 +42,7 @@
             </div>
         </div>
     </section>
+    <app-bottom-navigation></app-bottom-navigation>
 </main>
 </body>
 </html>
