--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -38,4 +38,6 @@
 <ng-template #noRecipe>
     <p>No recipe generated yet.</p>
 </ng-template>
+
 <!-- Similar setup for disliked recipes -->
+<app-bottom-navigation></app-bottom-navigation>
