--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,6 @@ main {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
