--- a/src/app/register/sign-up/sign-up.component.html
+++ b/src/app/register/sign-up/sign-up.component.html
@@ -1,54 +1,32 @@
 <!DOCTYPE html>
-<div class="row flex-center flex">
-    <div class="col-6 form-widget" aria-live="polite">
-        <h1 class="header">Supabase + Angular</h1>
-        <p class="description">Sign in via magic link with your email below</p>
-        <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="form-widget">
-            <div>
-                <label for="email">Email</label>
-                <input
-                        id="email"
-                        formControlName="email"
-                        class="inputField"
-                        type="email"
-                        placeholder="Your email"
-                />
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input
-                        id="password"
-                        formControlName="password"
-                        class="inputField"
-                        type="password"
-                        placeholder="Your password"
-                />
-            </div>
-            <div>
-                <label for="firstname">Firstname</label>
-                <input
-                        id="firstname"
-                        formControlName="firstname"
-                        class="inputField"
-                        type="firstname"
-                        placeholder="Your First Name"
-                />
-            </div>
-            <div>
-                <label for="lastname">Lastname</label>
-                <input
-                        id="lastname"
-                        formControlName="lastname"
-                        class="inputField"
-                        type="lastname"
-                        placeholder="Your Last Name"
-                />
-            </div>
-            <div>
-                <button type="submit" class="button block" [disabled]="loading">
-                    {{ loading ? 'Loading' : 'Send magic link' }}
-                </button>
-            </div>
-        </form>
-    </div>
+<div id="full-page">
+    <h1 class="text-center" id="title"><b>Sign in via magic link</b></h1>
+    <p id="sub-title">Enter your email below.</p>
+    <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="text-center">
+        <mdb-form-control class="mb-4">
+            <input mdbInput type="email" id="email"  formControlName="email" class="form-control" />
+            <label mdbLabel class="form-label" for="email">Email Address</label>
+        </mdb-form-control>
+
+        <mdb-form-control class="mb-4">
+            <input mdbInput type="firstname" id="firstname" formControlName="firstname" class="form-control" />
+            <label mdbLabel class="form-label" for="firstname">First Name</label>
+        </mdb-form-control>
+
+        <mdb-form-control class="mb-4">
+            <input mdbInput type="lastname" id="lastname" formControlName="lastname" class="form-control" />
+            <label mdbLabel class="form-label" for="lastname">Last Name</label>
+        </mdb-form-control>
+
+        <mdb-form-control class="mb-4">
+            <input mdbInput type="password" id="password"  formControlName="password" class="form-control" />
+            <label mdbLabel class="form-label" for="password">Password</label>
+        </mdb-form-control>
+
+
+
+        <button mdbRipple type="submit" class="button" [disabled]="loading">
+            {{ loading ? 'Loading' : 'Send magic link' }}
+        </button>
+    </form>
 </div>
