--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,8 +104,12 @@ app-bottom-navigation {
 }
 
 #full-page {
-  padding-bottom: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 0 0;
 }
-
  
 
