preference and allergies styling

--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,4 +1,4 @@
-<div id="full-page">
+<div id="full-page-wo-nav">
     <div class="text-center" id="logo">
         <p id="logo-title">MEALPLANND</p>
         <p id="logo-subtitle"><span class="dark-green-text">Allergies </span>made easy.</p>
@@ -15,7 +15,7 @@
             <label mdbLabel class="form-label" for="password">Password</label>
         </mdb-form-control>
 
-        <button mdbRipple type="submit" class="button">Log in</button>
+        <button mdbRipple type="submit" class="button wide">Log in</button>
 
         <div class="text-center">
             <p>Not a member? <a href="signup" (click)="redirectToSignUpPage()" >Register</a></p>
