--- a/src/app/register/sign-up/sign-up.component.html
+++ b/src/app/register/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div id="full-page">
+<div id="full-page-wo-nav">
     <h1 class="text-center" id="title"><b>Sign in via magic link</b></h1>
     <p id="sub-title">Enter your email below.</p>
     <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="text-center">
