--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -7,7 +7,9 @@
     <!-- recipes.component.html -->
     <div *ngFor="let index of recipeIndices" class="recipe-small-view">
         <div class="image-with-border">
-            <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
+            <img [src]="liked_urls[index]"
+                 alt="Image of {{ liked_recipes[index].name }}"
+                 (click)="navigateToRecipeDetail(liked_recipes[index].id)">
             <button class="btn btn-outline-secondary" (click)="toggle_like_Heart(index)">
                 <i [class]="liked_recipes_liked[index] ? 'bi bi-heart-fill text-danger' : 'bi bi-heart'"></i>
             </button>
