--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Meal Plans Home Page</title>
@@ -13,36 +14,28 @@
     <img class="profile-image" src="assets/profile-pic.webp" alt="Profile Image">
 </div>
 <main>
-    <section *ngFor="let family of families">
+    <section>
         <div class="family-container">
-            <h2>{{ family.family_name }}</h2>
+            <h2>Family 1</h2>
             <button class="circular-button add" (click)="navigateToCalender()"></button>
-            <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToAddMealPlan()"></button>
+            <button class="circular-button plus" (click)="navigateToAddMealPlan()"></button>
+            <button class="circular-button plus" (click)="navigateToGroceryList()"></button>
         </div>
-
         <div class="container mt-4">
             <div class="card bg-light">
                 <div class="card-body scrolling-wrapper scrollable-card-container">
                     <div class="card card-container" *ngFor="let day of days">
-                        <img src="'https://ztcqcptzuazkqtmcpsxw.supabase.co/storage/v1/object/public/recipes_thumbnail_and_picture/' + {{day.recipe}}" class="card-img-top" alt="Image 1" width="250px" height="250px">
-                        <div class="card-header">{{ day.day_of_week.trim() }}</div>
+                        <img src="{{day.image}}" class="card-img-top" alt="Image 1" width="250px" height="250px">
+                        <div class="card-header">{{day.weekday}}</div>
                         <div class="card-body">
                             <p class="card-title">Attendees</p>
-                            <ng-container *ngIf="day.users.length > 0; else noAttendees">
-                                <p class="card-text">
-                                    <ng-container *ngFor="let user of day.users; let last = last">
-                                        {{ user.user_name }}{{ !last ? ',' : '' }}
-                                    </ng-container>
-                                </p>
-                            </ng-container>
-                            <ng-template #noAttendees>
-                                <p class="card-text">No attendees</p>
-                            </ng-template>
+                            <p class="card-text">{{ day.attendees.join(', ') || 'No attendees' }}</p>
                         </div>
+
                         <div class="card-footer">
-              <span [ngClass]="{'attend': day.will_attend, 'not-attend': !day.will_attend}">
-                {{ day.will_attend ? '✔ Attending' : '✘ Not Attending' }}
-              </span>
+                            <span [ngClass]="{'attend': day.willAttend, 'not-attend': !day.willAttend}">
+                                {{ day.willAttend ? '✔ Attending' : '✘ Not Attending' }}
+                            </span>
                             <button class="circular-button refresh"></button>
                         </div>
                     </div>
@@ -50,7 +43,7 @@
             </div>
         </div>
     </section>
-
+    <app-bottom-navigation></app-bottom-navigation>
 </main>
 </body>
 </html>
