finishing the recipe page

--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -42,6 +42,12 @@
     right: 1px; /* Align to the left */
     /* additional styles if needed */
   }
+.btn-outline-thirdly {
+  position: absolute; /* Absolute positioning relative to the parent */
+  top: 1px; /* Align to the top */
+  left: 1px; /* Align to the left */
+  /* additional styles if needed */
+}
   
   /* Styles for the heart button */
   .heart-btn {
