--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -18,20 +18,43 @@
         </div>
     </div>
 </div>
-<h3>Your nono's</h3>
-<div class="disliked-recipes">
-    <!-- recipes.component.html -->
-    <div *ngFor="let index of recipeIndices" class="recipe-small-view">
-        <div class="image-with-border">
-            <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}">
-            <button class="btn btn-outline-secondary"  (click)="toggle_like_Heart(index)">
-                <i class="bi bi-heart" [class.red] = "liked_recipes_liked[index]"></i>
-            </button>
 
-            <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
+
+<!-- Recommended Recipes -->
+<h3>Recommended for You</h3>
+<div class="liked-recipes">
+    <div *ngFor="let index of recommended_recipeIndices" class="recipe-small-view">
+        <div class="image-with-border">
+            <img [src]="recommended_urls[index]"
+                 alt="Image of {{ recommended_recipes[index].name }}"
+                 (click)="navigateToRecipeDetail(recommended_recipes[index].id)">
+            <button class="btn btn-outline-secondary" (click)="like_recommended_recipe(index)">
+                <i [class]="recommended_recipes_liked[index] ? 'bi bi-heart-fill text-danger' : 'bi bi-heart'"></i>
+            </button>
+            <button class="btn btn-outline-thirdly" (click)="unlike_recommended_recipe(index)">
+                <i [class]="recommended_recipes_unliked[index] ? 'bi bi bi-hand-thumbs-down-fill' : 'bi bi-hand-thumbs-down'"></i>
+            </button>
+            <p class="recipe_name">{{ recommended_recipes[index].name }}</p>
         </div>
     </div>
 </div>
+<!-- Your nono's (Unliked Recipes) -->
+<h3>Your nono's</h3>
+<div class="liked-recipes">
+    <div *ngFor="let index of unliked_recipeIndices" class="recipe-small-view">
+        <div class="image-with-border">
+            <img [src]="unliked_urls[index]"
+                 alt="Image of {{ unliked_recipes[index].name }}"
+                 (click)="navigateToRecipeDetail(unliked_recipes[index].id)">
+            <button class="btn btn-outline-secondary" (click)="unlike_recipe(index)">
+                <i [class]="unliked_recipe_unliked[index] ? 'bi bi bi-hand-thumbs-down-fill' : 'bi bi-hand-thumbs-down'"></i>
+            </button>
+
+            <p class="recipe_name">{{ unliked_recipes[index].name }}</p>
+        </div>
+    </div>
+</div>
+
 
  <button class="recipe-generation" (click)="sendRecipeRequest()">
      generate
