--- a/src/app/register/allergies/allergies.component.html
+++ b/src/app/register/allergies/allergies.component.html
@@ -6,10 +6,8 @@
     </div>
 
     <div id="bottom-buttons">
-        <button class="button-back" (click)="redirectToDietaryPreferencePage()">🡄</button>
-        <button class="button wide" id="continue" (click)="redirectToSignUpPage()">Continue</button>
+        <button class="button-back">🡄</button>
+        <button class="button wide" id="continue">Continue</button>
     </div>
 
 </div>
-
-<router-outlet></router-outlet>
