--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,9 +1,21 @@
-
+@import "../../styles";
 .mat-mdc-form-field {
     margin-top: 16px;
-  }
+}
 
-::ng-deep .mat-horizontal-stepper-header{
-    display: none !important;
-    pointer-events: none !important;
+#sub-title {
+  margin-bottom: 30%;
+}
+
+:host ::ng-deep .mat-horizontal-stepper-header{
+  display: none !important;
+  pointer-events: none !important;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px; /* Adjust the margin as needed */
 }
