--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,74 +1,42 @@
-<mat-stepper>
+<mat-stepper id="full-page-wo-nav">
   <mat-step>
-    <head>
-      <title>Welcome Page</title>
-    </head>
-    <body>
-    <div>
-        <h1>Welcome!</h1>
-    </div>
-    <div>
-        <p id="description">Get started with setting up your account now.</p>
-    </div>
-    <div>
-      <button mat-button matStepperNext>Next</button>
-    </div>
-    </body>
-  </mat-step>
-  <mat-step>
-    <div class="row flex-center flex">
-      <div class="col-6 form-widget" aria-live="polite">
-        <h1 class="header">Supabase + Angular</h1>
-        <p class="description">Sign in via magic link with your email below</p>
-        <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="form-widget">
-          <div>
-            <label for="email">Email</label>
-            <input
-              id="email"
-              formControlName="email"
-              class="inputField"
-              type="email"
-              placeholder="Your email"
-              />
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input
-              id="password"
-              formControlName="password"
-              class="inputField"
-              type="password"
-              placeholder="Your password"
-              />
-          </div>
-          <div>
-            <label for="firstname">Firstname</label>
-            <input
-              id="firstname"
-              formControlName="firstname"
-              class="inputField"
-              type="firstname"
-              placeholder="Your First Name"
-              />
-            </div>
-            <div>
-              <label for="lastname">Lastname</label>
-              <input
-                id="lastname"
-                formControlName="lastname"
-                class="inputField"
-                type="lastname"
-                placeholder="Your Last Name"
-              />
-            </div>
-            <div>
-              <button type="submit" class="button block" [disabled]="loading">
-                {{ loading ? 'Loading' : 'Send magic link' }}
-              </button>
-            </div>
-        </form>
+    <div class="center">
+      <h1 class="text-center" id="title"><b>Welcome!</b></h1>
+      <p id="sub-title" class="text-center">Get started with setting up your account now.</p>
+      <div>
+        <button class="button wide" matStepperNext>Next</button>
       </div>
     </div>
+  </mat-step>
+  <mat-step>
+    <h1 class="text-center" id="title-2"><b>Sign in via magic link</b></h1>
+    <p id="sub-title-2" class="text-center">Enter your email below.</p>
+    <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="text-center">
+      <mdb-form-control class="mb-4">
+        <input mdbInput type="email" id="email"  formControlName="email" class="form-control" />
+        <label mdbLabel class="form-label" for="email">Email Address</label>
+      </mdb-form-control>
+
+      <mdb-form-control class="mb-4">
+        <input mdbInput type="firstname" id="firstname" formControlName="firstname" class="form-control" />
+        <label mdbLabel class="form-label" for="firstname">First Name</label>
+      </mdb-form-control>
+
+      <mdb-form-control class="mb-4">
+        <input mdbInput type="lastname" id="lastname" formControlName="lastname" class="form-control" />
+        <label mdbLabel class="form-label" for="lastname">Last Name</label>
+      </mdb-form-control>
+
+      <mdb-form-control class="mb-4">
+        <input mdbInput type="password" id="password"  formControlName="password" class="form-control" />
+        <label mdbLabel class="form-label" for="password">Password</label>
+      </mdb-form-control>
+
+      <button mdbRipple type="submit" class="button" [disabled]="loading">
+        {{ loading ? 'Loading' : 'Send magic link' }}
+      </button>
+    </form>
+
     <div>
       <p>Go to a different step to see the error state</p>
       <button mat-button matStepperPrevious>Back</button>
