--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,10 +16,20 @@
     border-radius: 10px;
     background-color: #eee; /* Grey background */
     margin: 10px; /* Spacing around each image container */
-    width: 120px; /* Fixed width */
-    height: 150px; /* Fixed height */
+    width: 150px; /* Fixed width */
+    height: 200px; /* Fixed height */
     text-align: center; /* Center text */
     display: inline-block; /* Display inline with block features */
+  }
+  
+  /* Styles for the images */
+  .image-with-border img {
+    width: 120px; /* Fixed width for the image */
+    height: 120px; /* Fixed height for the image */
+    border-radius: 50%; /* Makes the image circle shaped */
+    margin-top: 25px; /* Centers the image vertically */
+    object-fit: cover; /* Ensures the image covers the area properly */
+    display: inline-block; /* This will allow the image to be centered by text-align */
   }
 
   .card {
