--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
-<!-- recipes.component.html -->
-<h1>Your Recipes</h1>
-<h4>Let's have a look at your favourites</h4>
-<h3>Your likes</h3>
+<app-default-header [title]= "'Your Recipes'" [subtitle]="'Let\'s have a look at your favourites'"></app-default-header>
+<p>   </p>
+<h2>Recipe Likes</h2>
 <div class="liked-recipes">
-    <!-- recipes.component.html -->
     <div *ngFor="let index of recipeIndices" class="recipe-small-view">
-        <div class="image-with-border">
-            <img [src]="liked_urls[index]"
-                 alt="Image of {{ liked_recipes[index].name }}"
-                 (click)="navigateToRecipeDetail(liked_recipes[index].id)">
-            <button class="btn btn-outline-secondary" (click)="toggle_like_Heart(index)">
+        <div class="recipe-card">
+            <img [src]="liked_urls[index]" alt="Image of {{ liked_recipes[index].name }}" (click)="navigateToRecipeDetail(liked_recipes[index].id)" class="recipe-image">
+            <button class="button-back btn-outline-secondary" (click)="toggle_like_Heart(index)" >
                 <i [class]="liked_recipes_liked[index] ? 'bi bi-heart-fill text-danger' : 'bi bi-heart'"></i>
             </button>
-
-            <p class = "recipe_name">{{ liked_recipes[index].name }}</p>
+            <p class="recipe-name">{{ liked_recipes[index].name }}</p>
         </div>
     </div>
 </div>
 
 
 <!-- Recommended Recipes -->
-<h3>Recommended for You</h3>
+<h2>Recommended for You</h2>
 <div class="liked-recipes">
     <div *ngFor="let index of recommended_recipeIndices" class="recipe-small-view">
-        <div class="image-with-border">
-            <img [src]="recommended_urls[index]"
-                 alt="Image of {{ recommended_recipes[index].name }}"
-                 (click)="navigateToRecipeDetail(recommended_recipes[index].id)">
-            <button class="btn btn-outline-secondary" (click)="like_recommended_recipe(index)">
+        <div class="recipe-card">
+            <img [src]="recommended_urls[index]" alt="Image of {{ recommended_recipes[index].name }}" (click)="navigateToRecipeDetail(recommended_recipes[index].id)" class="recipe-image">
+            <button class="button-back btn-outline-secondary" (click)="like_recommended_recipe(index)">
                 <i [class]="recommended_recipes_liked[index] ? 'bi bi-heart-fill text-danger' : 'bi bi-heart'"></i>
             </button>
-            <button class="btn btn-outline-thirdly" (click)="unlike_recommended_recipe(index)">
+            <button class="button-back btn-outline-thirdly" (click)="unlike_recommended_recipe(index)">
                 <i [class]="recommended_recipes_unliked[index] ? 'bi bi bi-hand-thumbs-down-fill' : 'bi bi-hand-thumbs-down'"></i>
             </button>
-            <p class="recipe_name">{{ recommended_recipes[index].name }}</p>
+            <p class="recipe-name">{{ recommended_recipes[index].name }}</p>
         </div>
     </div>
 </div>
 <!-- Your nono's (Unliked Recipes) -->
-<h3>Your nono's</h3>
+<h2>Your nono's</h2>
 <div class="liked-recipes">
     <div *ngFor="let index of unliked_recipeIndices" class="recipe-small-view">
-        <div class="image-with-border">
+        <div class="recipe-card">
             <img [src]="unliked_urls[index]"
                  alt="Image of {{ unliked_recipes[index].name }}"
-                 (click)="navigateToRecipeDetail(unliked_recipes[index].id)">
-            <button class="btn btn-outline-secondary" (click)="unlike_recipe(index)">
+                 (click)="navigateToRecipeDetail(unliked_recipes[index].id)" class="recipe-image">
+            <button class="button-back btn-outline-secondary" (click)="unlike_recipe(index)">
                 <i [class]="unliked_recipe_unliked[index] ? 'bi bi bi-hand-thumbs-down-fill' : 'bi bi-hand-thumbs-down'"></i>
             </button>
 
-            <p class="recipe_name">{{ unliked_recipes[index].name }}</p>
+            <p class="recipe-name">{{ unliked_recipes[index].name }}</p>
         </div>
     </div>
 </div>
