recipe page styling

--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,5 @@
 <h1>{{ name }}</h1>
-<div class="recipe-detail-card">
+<div class="bottom-element recipe-detail-card">
     <img
             class="recipe-detail-image"
             [src]="imageUrl"
