--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -49,8 +49,8 @@
 </div>
 
 
- <button class="recipe-generation" (click)="sendRecipeRequest()">
-     generate
+ <button class="bottom-element button recipe-generation" (click)="sendRecipeRequest()">
+     Generate a recipe
  </button>
 <div *ngIf="showedrecipe; else noRecipe">
     <p>{{ showedrecipe }}</p>
