--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <button type="button" class="button" id="new-family" href="#" (click)="openModalJoin()">Join a family</button>
-    <button type="button" class="button" id="create-family" href="#" (click)="openModalCreate()">Create a family</button>
+    <button type="button" class="bottom-element button" id="create-family" href="#" (click)="openModalCreate()">Create a family</button>
 
 </div>
 
