--- a/src/app/recipe/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.scss
@@ -4,7 +4,7 @@ h1 {
 }
 
 .recipe-detail-card {
-  margin: 20px auto;
+  margin: 20px;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   max-width: 600px;
