Alter the profile page. Now people can change the name and fistname

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="updateProfileForm" (ngSubmit)="updateProfile()" class="form-widget">
     <div>
-        <label for="fistname">fistName</label>
+        <label for="fistname">First Name</label>
         <input formControlName="firstname" id="fistname" type="text" />
     </div>
     <div>
