--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -82,7 +82,8 @@
   
   }
 
-  .bottom-element {
-    padding-bottom: 70px;
+  #not-available {
+    color: $dark-gray;
+    margin-left: 1em;
   }
   
