--- a/src/app/meal-plans/home/meal-plans-home.component.scss
+++ b/src/app/meal-plans/home/meal-plans-home.component.scss
@@ -1,26 +1,10 @@
-.profile-circle {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    background-color: #3498db;
-    border-radius: 50%;
-  }
-  
-  .profile-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: flex;
-  }
-  
+
   .scrollable-card-container {
     white-space: nowrap;
     overflow-x: auto;
   }
   
-  .card-container {
+  .card {
     display: inline-block;
     width: 18rem;
     margin-right: 20px;
@@ -93,4 +77,3 @@
   .circular-button:hover {
     background-color: #00ffff;
   }
-  
