Add a button to get back from the profile page to the home page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -26,6 +26,9 @@
             {{ loading ? 'Loading ...' : 'Update' }}
         </button>
     </div>
+    <div>
+        <button class="button block" (click)="navigateToHome()">Home</button>
+    </div>
 
     <!-- Button to sign out -->
     <div>
