Change the code in the register pages to show the allergies and ingredients as also update the routing

--- a/src/app/register/congrats/congrats.component.html
+++ b/src/app/register/congrats/congrats.component.html
@@ -8,11 +8,10 @@
     <h1>Congrats!</h1>
 </div>
 <div>
-    <p id="description">You have successfully made your account. You're only missing a family.</p>
+    <p id="description">You have successfully made your account.</p>
 </div>
 <div>
-    <button (click)="redirectToNewPage()">Continue</button>
+    <button class="button wide" id="continue" (click)="navigateToHome()">Continue</button>
 </div>
-<router-outlet></router-outlet>
 </body>
 </html>
