profile page styling

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -2,6 +2,12 @@
   border-radius: 50%;
   width: 10em;
   height: 10em;
-  margin-right: 10px;
   object-fit: cover;
+  margin-bottom: 5%;
+  margin-top: 50%;
+}
+
+form {
+  padding-right: 5%;
+  padding-left: 5%;
 }
